fix body css and remove unwanted horizontal scroll

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,11 @@
+body {
+    margin: 0;
+    overflow-x: hidden;
+}
+
 .main-container {
     width: 100vw;
-    height: fit-content;
-    min-height: 100vh;
+    height: 100vh;
     background-color: blueviolet;
     display: grid;
     grid-template-columns: auto auto auto;
